--- a/src/components/Header/assets/styles/Header.module.css
+++ b/src/components/Header/assets/styles/Header.module.css
@@ -1,3 +1,4 @@
 .headerBackground {
   background: radial-gradient(27383.93% 123.81% at 0% 25.57%, #e7edf5 0%, #e7f5f2 100%);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
